<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <org.odk.collect.draw.DrawView
        android:id="@+id/drawView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </org.odk.collect.draw.DrawView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="192dp"
        android:visibility="invisible"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/reset_image"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="198dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:visibility="invisible"
        app:elevation="6dp"
        style="?attr/floatingActionButtonSmallStyle"
        app:srcCompat="@drawable/ic_clear_white"
        tools:visibility="visible"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_save_and_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="142dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginLeft="72dp"
        android:visibility="invisible"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/save_and_close"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_and_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="147dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:visibility="invisible"
        app:elevation="6dp"
        style="?attr/floatingActionButtonSmallStyle"
        app:srcCompat="@drawable/ic_save_white"
        tools:visibility="visible"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_set_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginLeft="72dp"
        android:visibility="invisible"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/set_color"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_set_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:visibility="invisible"
        app:elevation="6dp"
        style="?attr/floatingActionButtonSmallStyle"
        app:srcCompat="@drawable/ic_color_lens_white"
        tools:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:tag="0"
        app:srcCompat="@drawable/ic_add_white_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
