...
    <!--
    ##############################################
    # FORM FEATURES
    ##############################################
    -->
    <!-- Name of button displayed when a screen contains multiple questions populated by an external app: https://docs.getodk.org/launch-apps-from-collect/#launching-external-apps-to-populate-multiple-fields -->
    <string name="launch_app">Launch</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="no_app">The requested application is missing. Please manually enter the reading.</string>
    <string name="null_intent_value">The external application did not provide expected information.</string>
    <!-- Text on button that is part of print questions. Tapping the button prints the value of the question. -->
    <string name="print">Print</string>

...
    <!-- Prompt under view finder to describe where to place the camera to scan a barcode -->
    <string name="barcode_scanner_prompt">Place the barcode inside the rectangle</string>

    <!-- Label for button that rotates camera orientation when scanning barcodes -->
    <string name="rotate_device">Rotate device</string>

    <string name="open_file">Open file</string>

    <string name="rank_items">Rank items</string>

    <string name="number_picker_title">Number Picker</string>
    <string name="invalid_range_widget">This widget has invalid parameters!</string>

...
    <string name="slider_start_label">Slider start label</string>
    <!-- Content description for the label at the end (maximum) of the slider -->
    <string name="slider_end_label">Slider end label</string>

    <string name="svg_file_does_not_exist">SVG file does not exist!</string>

    <string name="capture_image">Take Picture</string>
    <string name="choose_image">Choose Image</string>
    <string name="selected_invalid_image">Selected file is not a valid image</string>
    <string name="take_picture_instruction">Tap the screen to take a picture</string>
    <string name="error_front_camera_unavailable">Front camera not available on this device</string>
    <string name="camera_error">There was an error taking picture</string>
    <string name="camera_failed_to_initialize">Couldn\'t initialize camera!</string>
    <string name="annotate_image">Annotate Image</string>
...
    <string name="draw_image">Sketch Image</string>
    <string name="reset_image">Reset</string>
    <string name="set_color">Set Color</string>

    <string name="capture_video">Record Video</string>
    <string name="choose_video">Choose Video</string>
    <string name="play_video">Play Video</string>

    <string name="choose_file">Choose File</string>

    <!-- Text for button that deletes a file that is the answer to a question -->
    <string name="delete_answer_file">Delete</string>

...
