...
        android:layout_marginTop="@dimen/margin_extra_small"
        android:id="@+id/waveform"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <org.odk.collect.android.audio.AudioControllerView
        android:id="@+id/audio_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

