...
            <KeyAttribute
                motion:motionTarget="@+id/titleTextView"
                motion:framePosition="60"
                android:alpha="1.0" />
            <KeyAttribute
                motion:motionTarget="@+id/bluelogo"
                motion:framePosition="25"
                android:translationY="-10dp" />
        </KeyFrameSet>
    </Transition>

    <ConstraintSet android:id="@+id/start">

...
